--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -37,6 +37,7 @@ jobs:
 
       - name: 安装依赖
         run: |
+          corepack disable
           corepack enable
           pnpm install --frozen-lockfile
 
