--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -37,8 +37,7 @@ jobs:
 
       - name: 安装依赖
         run: |
-          corepack disable
-          corepack enable
+          npm i -g pnpm@latest
           pnpm install --frozen-lockfile
 
       - name: 构建文档
